--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -196,7 +196,7 @@
     }
 
     .home-img {
-        background: url(../../images/festivalFilmDePleinAirBKGResa.jpg) no-repeat center;
+        background: url(./images/festivalFilmDePleinAirBKGResa.jpg) no-repeat center;
         background-size: 100% auto;
     }
 
