--- a/style.css
+++ b/style.css
@@ -706,7 +706,7 @@ video {
   flex: 0 0 100%;
 }
 .reservation .home-img {
-  background: url(../../images/festivalFilmDePleinAirBKGResa.jpg) no-repeat center;
+  background: url(./images/festivalFilmDePleinAirBKGResa.jpg) no-repeat center;
   background-size: 100% auto;
 }
 @media screen and (min-width: 1000px) {
